--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "prestart": "parcel build ./public/index.html",
     "dev": "parcel serve ./public/index.html"
@@ -19,6 +20,7 @@
   },
   "homepage": "https://github.com/susanna4153/studbud2#readme",
   "dependencies": {
+    "amplitudejs": "^5.3.2",
     "express": "^4.18.1",
     "sass": "^1.52.1"
   },
