--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "amplitudejs": "^5.3.2",
     "express": "^4.18.1",
+    "moment": "^2.29.3",
     "sass": "^1.52.1"
   },
   "devDependencies": {
